--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
             
-            <form action="OT2transfer" method="get">
+            <form action="/OT2protocol" method="get">
                 <fieldset>
                     <legend>User Data Input</legend>
                 <p>
