--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 
             
-            <form action="/OT2protocol" method="get">
+            <form action="/OT2transfer" method="POST">
                 <fieldset>
                     <legend>User Data Input</legend>
                 <p>
@@ -87,7 +87,7 @@
                      
 
                 <p>
-                    <button type= "submit">Submit</button>
+                    <button type="submit">Submit</button>
                     <button type="reset">Reset</button>
                 </p>
                 </fieldset>
