--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
                 <p>
                     <label for="protocol">Choose a Protocol</label><br>
                     <select id="protocol" name="protocol">
-                        <option value="Extraction">DNA/RNA Extraction</option>
-                        <option value="Library">Library Building</option>
-                        <option value="qPCR">qPCR Setup</option>
-                        <option value="IndexPCR">Index PCR Setup</option>
+                        <option value="Extraction">Extraction</option>
+                        <option value="Library">Library</option>
+                        <option value="qPCR">qPCR</option>
+                        <option value="IndexPCR">IndexPCR</option>
                     </select>
                 </p>
 
